# vitals-monitor

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/board/vitals-monitor/: genimage.cfg  post-build.sh  post-image.sh
buildroot-external/configs/: vitals_monitor_stm32mp157f_dk2_defconfig
buildroot-external/package/alarm-service/: Config.in  alarm-service.mk
buildroot-external/package/network-service/: Config.in  network-service.mk
buildroot-external/package/sensor-service/: Config.in  sensor-service.mk
buildroot-external/package/vitals-ui/: Config.in  vitals-ui.mk
buildroot-external/package/watchdog-monitor/: Config.in  watchdog-monitor.mk
deploy/: README.md
deploy/security/: HARDENING_CHECKLIST.md  setup-dm-verity.sh  setup-luks.sh
deploy/security/apparmor/: alarm-service  network-service  sensor-service  vitals-ui  watchdog-monitor
deploy/systemd/: alarm-service.service  network-service.service  sensor-service.service  vitals-ui.service  watchdog.service
docs/: HARDWARE_INTEGRATION_GUIDE.md
docs/regulatory/: README.md  risk_analysis.md  software_architecture_doc.md  software_requirements_spec.md  software_test_plan.md  traceability_matrix.md
files/: CLAUDE.md  PRD.md  ROADMAP.md
files/prd/: PRD.md  ROADMAP.md
files/prd/requirements/: 00-clarifications.md  01-product-overview.md  02-functional-requirements.md  03-ui-ux-requirements.md  04-alarm-requirements.md  05-data-storage-requirements.md  06-integration-requirements.md  07-security-requirements.md  08-regulatory-requirements.md  09-architecture-requirements.md  10-development-environment.md
scripts/: docker-build.sh  flash-sd.sh
simulator/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c  sdl_display.c  sdl_display.h  sdl_input.c  sdl_input.h
src/common/ipc/: ipc_messages.h  ipc_transport.c  ipc_transport.h
src/core/: abdm_client.c  abdm_client.h  alarm_engine.c  alarm_engine.h  audit_log.c  audit_log.h  auth_manager.c  auth_manager.h  fhir_client.c  fhir_client.h  mock_data.c  mock_data.h  network_manager.c  network_manager.h  patient_data.c  patient_data.h  settings_store.c  settings_store.h  sync_queue.c  sync_queue.h  trend_db.c  trend_db.h  vitals_provider.h  vitals_provider_ipc.c  vitals_provider_mock.c  waveform_gen.c  waveform_gen.h
src/drivers/: README.md  ota_update.c  ota_update.h  sensor_hal.c  sensor_hal.h
src/services/: alarm_service.c  alarm_service.h  network_service.c  network_service.h  sensor_service.c  sensor_service.h  service_manager.c  service_manager.h
src/ui/icons/: phosphor_icons.h
src/ui/screens/: screen_alarms.c  screen_alarms.h  screen_audit_log.c  screen_audit_log.h  screen_login.c  screen_login.h  screen_main_vitals.c  screen_main_vitals.h  screen_manager.c  screen_manager.h  screen_patient.c  screen_patient.h  screen_settings.c  screen_settings.h  screen_trends.c  screen_trends.h
src/ui/themes/: theme_vitals.c  theme_vitals.h
src/ui/widgets/: widget_alarm_banner.c  widget_alarm_banner.h  widget_nav_bar.c  widget_nav_bar.h  widget_numeric_display.c  widget_numeric_display.h  widget_waveform.c  widget_waveform.h
tests/integration/: CMakeLists.txt  test_alarm_db_integration.c  test_auth_audit_integration.c  test_integration_runner.c  test_patient_trends_integration.c
tests/unit/: CMakeLists.txt  test_alarm_engine.c  test_audit_log.c  test_auth_manager.c  test_framework.h  test_patient_data.c  test_runner.c  test_settings_store.c
